--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".LandingActivty"
+    tools:context=".LandingActivity"
     android:background="@color/lightBlue">
 
     <ScrollView
